Fixed ugly overflow

--- a/templates/default/header.css
+++ b/templates/default/header.css
@@ -21,6 +21,7 @@
   position: fixed;
   z-index: 999;
   width: 100%;
+  background: white;
 }
 
 .header-icons-container {
